Overflow messages fixed

--- a/starter-code/css/styles.css
+++ b/starter-code/css/styles.css
@@ -16,3 +16,8 @@
   text-align: center;
   text-transform: uppercase;
 }
+
+#stack-overflow,
+#queue-overflow {
+  display: none;
+}
